# libosdp

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  configure.sh  library.json
.github/: dependabot.yml
.github/workflows/: create-release.yml  cross-plaform-build.yml  publish-pypi.yml  release.yml  reusable-ci.yml
CHANGELOG/: RELEASE-v4.0.0.md
cmake/: GitInfo.cmake
examples/c/: README.md  pd_app.c
examples/cpp/: pd_app.cpp
examples/platformio/: README.md  pd.ino
examples/python/: README.md  cp_app.py  pd_app.py
examples/rust/: README.md
include/: osdp.h  osdp.hpp  osdp_config.h  osdp_export.h
platformio/: osdp_config.h
python/: .gitignore  Doxyfile  MANIFEST.in  README.md  doxy-pyfilter.py  pyproject.toml  setup.py
python/osdp/: __init__.py  _marshal.py  _sys.pyi  _validate.py  channel.py  commands.py  constants.py  control_panel.py  enums.py  errors.py  events.py  key_store.py  peripheral_device.py  types.py
python/osdp_sys/: base.c  cp.c  data.c  module.c  module.h  pd.c  utils.c
scripts/: install-git-hooks.sh  make-release.sh  make_release.py  run-unit-tests.sh  run_coverage.sh  run_pytests.sh
src/: CMakeLists.txt  osdp_bio.c  osdp_bio.h  osdp_common.c  osdp_common.h  osdp_config.h  osdp_config.h.in  osdp_cp.c  osdp_diag.h  osdp_file.c  osdp_file.h  osdp_multipart.c  osdp_multipart.h  osdp_pd.c  osdp_phy.c  osdp_piv.c  osdp_piv.h  osdp_sc.c  osdp_trs.c  osdp_trs.h
src/crypto/: mbedtls.c  openssl.c  openssl.c.unused  tinyaes.c
tests/interop/: README.md  ftx.c  interop-check.sh  xfer.c
tests/pytest/: .coveragerc  README.md  _test_connection_topologies.py  conftest.py  pytest.ini  requirements.txt  test_api_errors.py  test_bioread_multipart.py  test_capabilities.py  test_channel_contract.py  test_commands.py  test_completion_callbacks.py  test_connection_topologies.py  test_data.py  test_docs.py  test_events.py  test_file_tx.py  test_hotplug.py  test_key_store.py  test_lib_flags.py  test_lifecycle.py  test_marshal.py  test_notifications.py  test_sc_keys.py  test_sc_negative.py  test_smartcard.py  test_status.py  test_sys_stub.py
tests/unit-tests/: CMakeLists.txt  README.md  emu-card.c  emu-card.h  test-async-fuzz.c  test-bio.c  test-busy.c  test-codec-fuzz.c  test-commands.c  test-cp-fsm.c  test-cp-phy.c  test-events.c  test-file.c  test-hotplug.c  test-multipart.c  test-notifications.c  test-pd-phy.c  test-pd-zc.c  test-piv.c  test-sc.c  test-sources.list  test-suites.def  test-trs-emu.c  test-trs.c  test.c  test.h
zephyr/: CMakeLists.txt
